Thu Jul 29 22:28:35 2010  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/pathname.c (path_cmp): Pathname#<=> translated
	  from pathname.rb.
	
Thu Jul 29 06:51:30 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (EXT_SRCS): add ext/json/parser/parser.c.

Thu Jul 29 05:52:15 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_file_s_basename): pass baselen to rmext.

Thu Jul 29 02:38:09 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* configure.in: not [freebsd] but [freebsd*] for AS_CASE.

Wed Jul 28 22:23:59 2010  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/pathname.c (path_eq): Pathname#{==,===,eql?} translated
	  from pathname.rb.

Wed Jul 28 19:37:33 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/Makefile.sub (config.h): VC6 or later have stddef.h.

	* include/ruby/missing.h: need to include stddef.h for size_t.

	* include/ruby/missing.h: shouldn't declare as dllimport when building
	  ruby itself (for Windows).

Wed Jul 28 17:11:48 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* missing/*.c: include missing.h

Wed Jul 28 09:38:03 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* cont.c: typos.

Wed Jul 28 09:24:43 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* cont.c: (RB_PAGE_SIZE): renamed from PAGE_SIZE. [ruby-dev:41870]

	* cont.c: (RB_PAGE_MASK): renamed from PAGE_MASK.

Tue Jul 27 23:09:09 2010  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/pathname.c (path_taint): use rb_obj_taint.
	  (path_untaint): Pathname#untaint translated from
	  pathname.rb.

Tue Jul 27 18:59:15 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (have_framework): added.

Tue Jul 27 18:33:42 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* defines.h, intern.h, missing.h, ruby.h, st.h, util.h: include
	  config.h and defines.h for autoconf macros.

Tue Jul 27 16:27:38 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* numeric.c (flo_cmp): typo.

Tue Jul 27 16:09:12 2010  NARUSE, Yui  <naruse@ruby-lang.org>
