@@ -1,3 +1,8 @@
+Fri Jul 30 07:48:04 2010  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>
+
+	* ext/tk/extconf.rb: use TK_XINCLUDES on tkConfig.sh when not empty,
+	  even if MacOS X Aqua version [ruby-dev:41883].
+
 Thu Jul 29 22:28:35 2010  Tanaka Akira  <akr@fsij.org>
 
 	* ext/pathname/pathname.c (path_cmp): Pathname#<=> translated
